--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -227,36 +227,23 @@ jobs:
           name: checkov-results
           path: checkov-*.sarif
 
-  # DAST with OWASP ZAP (only on main branch)
-  dast:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: [sast, sca, container-scan]
-    
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Start application with Docker Compose
-        run: |
-          docker-compose up -d
-          sleep 60  # Wait for services to be ready
-
-      - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0
-        with:
-          target: 'http://localhost:8000'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
-        continue-on-error: true
-
-      - name: Upload ZAP Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-results
-          path: zap-report.html
-
-      - name: Stop application
-        run: docker-compose down
+  # DAST with OWASP ZAP (disabled - requires running services)
+  # Uncomment and configure for staging/production environments
+  # dast:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #   needs: [sast, sca, container-scan]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Start application with Docker Compose
+  #       run: docker-compose up -d && sleep 60
+  #     - name: Run OWASP ZAP Baseline Scan
+  #       uses: zaproxy/action-baseline@v0.10.0
+  #       with:
+  #         target: 'http://localhost:8000'
+  #       continue-on-error: true
+  #     - name: Stop application
+  #       run: docker-compose down
 
   # Security Report Generation
   security-report:
