fix: skip K8s deploy job when cluster not configured - Add ENABLE_K8S_DEPLOY variable check - Add graceful skip for portfolio projects without K8s cluster

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -297,27 +297,41 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # Deploy to Kubernetes
+  # Deploy to Kubernetes (only runs when KUBE_CONFIG secret is configured)
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # Only deploy when on main branch AND KUBE_CONFIG secret is available
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && vars.ENABLE_K8S_DEPLOY == 'true'
     environment: production
 
     steps:
       - uses: actions/checkout@v4
 
+      - name: Check for Kubernetes credentials
+        id: check-kube
+        run: |
+          if [ -z "${{ secrets.KUBE_CONFIG }}" ]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "⚠️ KUBE_CONFIG secret not configured. Skipping deployment."
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Install kubectl
+        if: steps.check-kube.outputs.skip != 'true'
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.28.0'
 
       - name: Configure kubectl
+        if: steps.check-kube.outputs.skip != 'true'
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
 
       - name: Deploy to Kubernetes
+        if: steps.check-kube.outputs.skip != 'true'
         run: |
           kubectl apply -f k8s/namespace.yaml
           kubectl apply -f k8s/configmap.yaml
@@ -328,7 +342,12 @@ jobs:
           kubectl apply -f k8s/ingress.yaml
 
       - name: Verify deployment
+        if: steps.check-kube.outputs.skip != 'true'
         run: |
           kubectl rollout status deployment/backend -n chainsense-ai --timeout=300s
           kubectl rollout status deployment/frontend -n chainsense-ai --timeout=300s
           kubectl rollout status deployment/ml-service -n chainsense-ai --timeout=300s
+      
+      - name: Deployment skipped
+        if: steps.check-kube.outputs.skip == 'true'
+        run: echo "✅ Deployment skipped - no Kubernetes cluster configured. This is expected for portfolio/demo projects."
